fix error baru part 4